Fixed extra margins

--- a/client-app/src/components/Header.module.scss
+++ b/client-app/src/components/Header.module.scss
@@ -10,7 +10,6 @@
 
     position: relative;
     height: 10rem;
-    margin: 20px;
     left: 0px;
 
     border-radius: 15px;
